tests/semantic/invalid/struct_fields/unknown_field.src
struct Point {
  int x;
}

fn main() -> int {
  Point p;
  p.y = 1;  // no such field
  return 0;
}

